--- a/src/components/WinesPage/styles.scss
+++ b/src/components/WinesPage/styles.scss
@@ -10,6 +10,7 @@
     flex-wrap: nowrap;
     justify-content: flex-start;
     align-items: flex-start;
+    min-width: 200%;
 
   }
 
@@ -29,15 +30,6 @@
   }
 
   &__bottles {
-
-    &--container {
-
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-
-    }
 
     &--bottle {
     
@@ -72,10 +64,11 @@
 
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: flex-start;
         align-items: center;
         box-sizing: border-box;
         padding-bottom: 5rem;
+        bottom: 0;
 
         &-Elixir {
           border-top: 2px solid vars.$color-Elixir-blue2;
@@ -183,19 +176,29 @@
 
       &-hve {
         width: 30vw;
-        height: 90px;
+        height: 110px;
         margin-top: 3rem;
         display: flex;
         justify-content: flex-end;
         align-items: center;
-        background-image: url(../../assets/images/HVE.png);
         background-position: center left;
         background-size: contain;
         background-repeat: no-repeat;
         color: vars.$color-hve;
         text-align: right;
-        font-size: 1.2rem;
+        font-size: 1.6rem;
         font-weight: 300;
+
+        &-Elixir{
+          background-image: url(../../assets/images/HVE.png);
+          color: vars.$color-hve;
+        }
+
+        &-Godefroy{
+          background-image: url(../../assets/images/HVE-B.png);
+          color: vars.$color-black;
+        }
+      
       }
 
     }
